# agent-cloud

./: .ansible-lint  .gitignore  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint-and-test.yml
docs/: LINTING-AND-TESTING.md
plan/: ARCHITECTURE-EVALUATION.md  AUTOMATION-COMPOSABILITY-PLAN.md  CREDENTIAL-LIFECYCLE-PLAN.md  IMPLEMENTATION_PLAN.md  NETCLAW-INTEGRATION-PLAN.md  OLD-README.md  SPARSE-CHECKOUT-MIGRATION.md  SYSTEM-DESIGN-VM-DEPLOYMENT.md  UNIFICATION-PLAN.md
plan/architecture/: AUTOMATION-COMPOSABILITY.md  BRANCH-TESTING-WORKFLOW.md  SERVICE-INTEGRATION-PLAN.md  TESTING-AND-LINTING-PLAN.md
plan/development/: IMPLEMENTATION_PLAN.md  LINT-COMPLIANCE-PLAN.md  NETBOX-DISCOVERY-EXPANSION.md
platform/: .gitignore
platform/inventory/: local.yml  production.yml
platform/lib/: bao-client.sh  common.sh
platform/playbooks/: README.md  apply-openbao-policies.yml  apply-policy-nemoclaw.yml  apply-policy-orb-agent.yml  apply-policy-semaphore.yml  check-discovery.yml  check-secrets.yml  clean-deploy-netbox.yml  cleanup-netbox-duplicates.yml  cleanup-netbox.yml  collect-lldp-topology.yml  deploy-all.yml  deploy-n8n.yml  deploy-nemoclaw.yml  deploy-netbox.yml  deploy-nocodb.yml  deploy-openbao.yml  deploy-semaphore.yml  deploy-service.yml  distribute-ssh-keys.yml  harden-ssh.yml  install-docker.yml  install-lldpd.yml  provision-template.yml  provision-vm.yml  proxmox-validate.yml  run-pfsense-sync.yml  seed-discovery-credentials.yml  setup-pfsense-sync-timer.yml  sync-netbox-secrets.yml  (+9 more)
(+51 files in other folders)
