[project]
name = "agent-cloud"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PIE", "C4", "BLE"]
ignore = [
    "BLE001",  # blind except is intentional in worker error handling
    "SIM105",  # try-except-pass is clearer than contextlib.suppress in this codebase
    "C408",    # dict() calls used intentionally for readability with keyword args
]

[tool.ruff.lint.per-file-ignores]
"platform/services/netbox/deployment/lib/pfsense-sync.py" = ["E501"]  # legacy script, long lines

[tool.pytest.ini_options]
testpaths = ["platform/services/netbox/deployment/tests"]
